# amplifier-onboarding

./: .dockerignore  .env.example  .env.example.TEAM  .gitignore  404.html  CHANGELOG.md  CONTRACT_REVIEW_SUMMARY.md  CONTRIBUTING.md  DOCKER_UV_FIX.md  DOCS_INDEX.md  Dockerfile  Dockerfile.api-only  Dockerfile.optimized  QUICKSTART.md  README.md  README_FINANCIAL_ANALYSIS.md  SETUP.md  SETUP_AZURE.md  SETUP_OAUTH.md  TELEMETRY_IMPLEMENTATION_PLAN.md  TEST_COVERAGE_SUMMARY.md  USER_FLOW.md  USER_IDENTITY_FLOW.md  accessibility.html  acme_corp_calculations_worksheet.md  acme_corp_executive_dashboard.md  acme_corp_executive_presentation.md  acme_corp_financial_analysis.md  acme_corp_metrics_summary.csv  acme_corp_visual_summary.md  docker-compose.prod.yml  docker-compose.yml  financial_formulas_reference.md  gamer_foo_development_plan.md  index.html  package-lock.json  package.json  player_development_plan_foo.md  playwright.config.js  requirements-api.txt  (+4 more)
.archive/: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md
.archive/backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
.archive/backend/app/: __init__.py
.archive/backend/app/core/: config.py
.claude/: settings.local.json
.docs/: 06_TECHNICAL_ARCHITECTURE.md  AUDIENCES.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  index.html  (+5 more)
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: README  env.py
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  deps.py  pool.py
backend/app/core/: analytics.py  auth.py  config.py  database.py  rate_limiter.py  session_pool.py
backend/app/models/: __init__.py  base.py  execution_log.py  gallery_item.py
(+225 files in other folders)
