[tool.poetry]
name = "amplifier-backend"
version = "0.1.0"
description = "Amplifier web experience backend API"
authors = ["Amplifier Team"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
alembic = "^1.13.1"
pyjwt = "^2.8.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
httpx = "^0.26.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
applicationinsights = "^0.11.10"
python-json-logger = "^2.0.7"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.7.0"
ruff = "^0.0.282"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
